--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     </main>
 
     <footer>
-        <section id="contacts" class="contacts">
-            <div class="container container-with-padding">
+        <section class="contacts">
+            <div id="contacts" class="container container-with-padding">
                 <div>
                     <h2>Contacts</h2>
                     <p class="contacts_text">Want to know more or just chat?<br>You are welcome!.</p>
