optimize and finish fotter css

--- a/index.html
+++ b/index.html
@@ -18,34 +18,21 @@
         <div class="container">
             <nav class="nav">
                 <ul class="menu">
-                    <li>
-                        <a class="menu_link" href="#home">Home</a>
-                    </li>
-                    <li>
-                        <a class="menu_link" href="#about">About me</a>
-                    </li>
-                    <li>
-                        <a class="menu_link" href="#skills">Skills</a>
-                    </li>
-                    <li>
-                        <a class="menu_link" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="menu_link" href="#contacts">Contacts</a>
-                    </li>
+                    <li><a class="menu_link" href="#home">Home</a></li>
+                    <li><a class="menu_link" href="#about">About me</a></li>
+                    <li><a class="menu_link" href="#skills">Skills</a></li>
+                    <li><a class="menu_link" href="#portfolio">Portfolio</a></li>
+                    <li><a class="menu_link" href="#contacts">Contacts</a></li>
                 </ul>
             </nav>
         </div>
-
     </header>
-
     <main class="main">
         <section id="home">
             <div class="container">
                 <h1 id="title_name">Denis Novic</h1>
                 <img id="avatar" src="./assets/img/avatar.jpg" alt="avatar">
             </div>
-
         </section>
         <section id="about" class="gray-background">
             <div class="container container-with-padding">
@@ -64,88 +51,58 @@
                 <p>I work in such programs as</p>
                 <ul class="menu_skills">
                     <li class="skill_block">
-                        <div>
-                            <div class="skill_info">
-                                <img class="skill_img" src="./assets/img/Ps.png" alt="Photoshop">
-                                <p class="skill_name">Adobe<br>Photoshop</p>
-                            </div>
-                            <ul class="stars">
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                            </ul>
+                        <div class="skill_info">
+                            <img class="skill_img" src="./assets/img/Ps.png" alt="Photoshop">
+                            <p class="skill_name">Adobe<br>Photoshop</p>
                         </div>
+                        <ul class="stars">
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/white_star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/white_star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/white_star.jpg" alt="star"></li>
+                        </ul>
                     </li>
                     <li class="skill_block">
-                        <div>
-                            <div class="skill_info">
-                                <img class="skill_img" src="./assets/img/Ai.png" alt="Adobe Illustrator">
-                                <p class="skill_name">Adobe<br>Illustrator</p>
-                            </div>
-                            <ul class="stars">
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                            </ul>
+                        <div class="skill_info">
+                            <img class="skill_img" src="./assets/img/Ai.png" alt="Adobe Illustrator">
+                            <p class="skill_name">Adobe<br>Illustrator</p>
                         </div>
+                        <ul class="stars">
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/white_star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/white_star.jpg" alt="star"></li>
+                        </ul>
                     </li>
                     <li class="skill_block">
-                        <div>
-                            <div class="skill_info">
-                                <img class="skill_img" src="./assets/img/Ae.png" alt="Adobe After Effects">
-                                <p class="skill_name">Adobe<br>After Effects</p>
-                            </div>
-                            <ul class="stars">
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                            </ul>
+                        <div class="skill_info">
+                            <img class="skill_img" src="./assets/img/Ae.png" alt="Adobe After Effects">
+                            <p class="skill_name">Adobe<br>After Effects</p>
                         </div>
+                        <ul class="stars">
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/white_star.jpg" alt="star"></li>
+                        </ul>
                     </li>
                     <li class="skill_block">
-                        <div>
-                            <div class="skill_info">
-                                <img class="skill_img" src="./assets/img/figma.png" alt="Figma">
-                                <p class="skill_name">Figma<br> </p>
-                            </div>
-                            <ul id="last_stars" class="stars">
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                                <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star">
-                                </li>
-                            </ul>
+                        <div class="skill_info">
+                            <img class="skill_img" src="./assets/img/figma.png" alt="Figma">
+                            <p class="skill_name">Figma<br></p>
                         </div>
+                        <ul id="last_stars" class="stars">
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                            <li class="star_point"><img class="star_img" src="./assets/img/star.jpg" alt="star"></li>
+                        </ul>
                     </li>
-
                 </ul>
-
             </div>
         </section>
         <section id="portfolio" class="gray-background">
@@ -164,34 +121,25 @@
                         <img class="portfolio_img" src="./assets/img/braun.svg" alt="Braun Landing Page">
                         <p class="portfolio_description">Braun Landing Page - Concept</p>
                     </li>
-
                 </ul>
             </div>
         </section>
     </main>
-
     <footer>
         <section class="contacts">
             <div id="contacts" class="container container-with-padding">
-                <div>
-                    <h2>Contacts</h2>
-                    <p class="contacts_text">Want to know more or just chat?<br>You are welcome!.</p>
-                </div>
+                <h2>Contacts</h2>
+                <p class="contacts_text">Want to know more or just chat?<br>You are welcome!</p>
                 <div class="contacts_form">
                     <input id="send_btn" type="button" value="Send message" class="button">
                     <ul class="socials">
-                        <li class="social_item"><img class="social_img" src="./assets/img/linkedin.svg" alt="LinkedIn">
-                        </li>
-                        <li class="social_item"><img class="social_img" src="./assets/img/instagram.svg"
-                                alt="Instagram"></li>
-                        <li class="social_item"><img class="social_img" src="./assets/img/behance.svg" alt="Behance">
-                        </li>
-                        <li class="social_item"><img class="social_img" src="./assets/img/dribbble.svg" alt="Dribbble">
-                        </li>
+                        <li class="social_item"><img class="social_img" src="./assets/img/linkedin.svg" alt="LinkedIn"></li>
+                        <li class="social_item"><img class="social_img" src="./assets/img/instagram.svg" alt="Instagram"></li>
+                        <li class="social_item"><img class="social_img" src="./assets/img/behance.svg" alt="Behance"></li>
+                        <li class="social_item"><img class="social_img" src="./assets/img/dribbble.svg" alt="Dribbble"></li>
                     </ul>
                 </div>
-                <p>Like me on<br>inkedIn, Instagram, Behance,<br>Dribble</p>
-                
+                <p class="social-text">Like me on<br>inkedIn, Instagram, Behance,<br>Dribble</p>
             </div>
         </section>
     </footer>
